feat(terminal): 支持ANSI控制序列和实时输出更新
- 实现了ANSI转义序列解析，支持清行和光标定位指令
- 添加了回车符原位更新进度功能，避免重复输出行
- 集成了stderr到stdout的重定向以支持进度信息显示
- 优化了Java端进程管理，改进了字符编码和资源释放
- 修复了WebSocket连接成功消息的处理逻辑
- 添加了对控制序列的完整性和安全性验证
- 更新了前端监听器以响应最新的消息内容变化