@@ -5,10 +5,10 @@ import org.springframework.web.socket.TextMessage;
 import org.springframework.web.socket.WebSocketSession;
 import team.h2syj.terminalproxy.task.AbstractAsyncTask;
 
-import java.io.BufferedReader;
 import java.io.IOException;
-import java.io.InputStream;
 import java.io.InputStreamReader;
+import java.io.Reader;
+import java.nio.charset.StandardCharsets;
 
 @Slf4j
 public class TerminalExecutor extends AbstractAsyncTask {
@@ -16,7 +16,7 @@ public class TerminalExecutor extends AbstractAsyncTask {
     private final WebSocketSession session;
     private final String[] command;
     private Process process;
-    private boolean stop;
+    private volatile boolean stop;
 
     public TerminalExecutor(WebSocketSession session, String... command) {
         this.session = session;
@@ -26,33 +26,44 @@ public class TerminalExecutor extends AbstractAsyncTask {
     @Override
     public void run() {
         try {
-            this.process = Runtime.getRuntime().exec(command);
-            //取得命令结果的输出流
-            InputStream fis = process.getInputStream();
-            //用一个读输出流类去读
-            InputStreamReader isr = new InputStreamReader(fis);
-            //用缓冲器读行
-            BufferedReader br = new BufferedReader(isr);
-            String line = null;
-            //直到读完为止
-            while (!stop && (line = br.readLine()) != null)
-                session.sendMessage(new TextMessage(line));
+            this.process = new ProcessBuilder(command)
+                    // 进度信息通常写入 stderr，合并后一起发送，避免错误流阻塞子进程。
+                    .redirectErrorStream(true)
+                    .start();
+            try (Reader reader = new InputStreamReader(process.getInputStream(), StandardCharsets.UTF_8)) {
+                char[] buffer = new char[1024];
+                int length;
+                // 保留 \r、\n 和 ANSI 控制序列，由客户端按终端语义更新当前行。
+                while (!stop && (length = reader.read(buffer)) != -1) {
+                    session.sendMessage(new TextMessage(new String(buffer, 0, length)));
+                }
+            }
             int exitValue = process.waitFor();
             session.sendMessage(new TextMessage(String.format("!exit:%s", exitValue)));
-        } catch (IOException | InterruptedException e) {
-            log.error(e.getMessage(), e);
-            try {
-                if (session.isOpen())
-                    session.sendMessage(new TextMessage(e.getMessage()));
-            } catch (IOException ex) {
-                log.error(e.getMessage(), e);
+        } catch (InterruptedException e) {
+            Thread.currentThread().interrupt();
+            handleError(e);
+        } catch (IOException e) {
+            handleError(e);
+        }
+    }
+
+    private void handleError(Exception e) {
+        log.error(e.getMessage(), e);
+        try {
+            if (session.isOpen()) {
+                session.sendMessage(new TextMessage(e.getMessage() == null ? e.getClass().getSimpleName() : e.getMessage()));
             }
+        } catch (IOException ex) {
+            log.error(ex.getMessage(), ex);
         }
     }
 
     @Override
     public void stop() {
         stop = true;
-        process.destroy();
+        if (process != null) {
+            process.destroy();
+        }
     }
 }
